# IR_SLAM

./: LICENSE  README.md
thermal_preprocess/: CMakeLists.txt  package.xml
thermal_preprocess/include/: image_histogram.h
thermal_preprocess/src/: image_histogram.cpp  main.cpp  thermal_node.h
